AM-1136: update data validation, add validation for update certificate method